<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.angel.calculadorabasica.MainActivity">

    <EditText
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_1"
        />

    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_2"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSumar"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:text="@string/btn_suma"
            android:textSize="@dimen/text_size"
            />

        <Button
            android:id="@+id/btnRestar"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:text="@string/btn_resta"
            android:textSize="@dimen/text_size"
            />

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:text="@string/btn_mul"
            android:textSize="@dimen/text_size"
            />

        <Button
            android:id="@+id/btnDividir"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:text="@string/btn_div"
            android:textSize="@dimen/text_size"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="00"
        android:gravity="center"
        android:textSize="@dimen/textView_size"
        />

</LinearLayout>
